Kullanıcı tarafındaki sipariş işlemleri tamamlandı. Login olan kullanıcıya  göre kullanılan api endpointleri oluşturuldu ve dökümantasyona eklendi.
